fixed styles for footer on mobile devices

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -420,13 +420,12 @@ input, select {
   justify-content: center;
   align-items: center;
   height: 60px;
+  font-size: 14px;
   background: #D9D9D9;
 }
 .footer__box-company {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  gap: 20px;
   margin: 0 auto;
   padding: 2px 5px;
   transform: translateX(calc(50% + 117px));
@@ -436,7 +435,8 @@ input, select {
   color: #676767;
 }
 .footer__logo {
-  transform: translateY(-3px);
+  width: 130px;
+  transform: translateY(-2px);
 }
 .footer__link {
   display: inline-block;
@@ -460,6 +460,5 @@ input, select {
 @media screen and (max-width: 768px) {
   .footer__box-company {
     transform: unset;
-    gap: 5px;
   }
 }/*# sourceMappingURL=style.css.map */
