--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -3,13 +3,12 @@
   justify-content: center;
   align-items: center;
   height: 60px;
+  font-size: 14px;
   background: #D9D9D9;
 
   &__box-company {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    gap:20px;
     margin: 0 auto;
     padding: 2px 5px;
     transform: translateX(calc(50% + 117px));
@@ -21,7 +20,8 @@
   }
 
   &__logo {
-    transform: translateY(-3px);
+    width: 130px;
+    transform: translateY(-2px);
   }
 
   &__link {
@@ -55,7 +55,6 @@
   .footer {
     &__box-company {
       transform: unset;
-      gap: 5px;
     }
   }
 }
